<resources>
    <string name="app_name">ToDoApp</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In imperdiet congue aliquam. Sed vitae est a nibh egestas semper non id orci. Quisque non feugiat justo, eu elementum tellus. Quisque ornare enim nisl, at ultrices nunc sodales non. Nulla facilisi. Cras semper et erat eu elementum. Sed interdum, urna non lacinia luctus, felis</string>
    <string name="my_todos">Мои дела</string>
    <string name="visibility">Visibility</string>
    <string name="change_visibility">Change visibility</string>
    <string name="completed">Выполнено - %1$d</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="add_todo">Add todo</string>
    <string name="priority">Важность</string>
    <string name="no">Нет</string>
    <string name="what_to_do">Что надо cделать…</string>
    <string name="low">Низкий</string>
    <string name="high"><font color="#FF3B30">Высокий</font></string>
    <string name="make_until">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="test_date">2 июня 2012</string>
    <string name="card_edit_transition">cardEditTransition</string>
    <string name="choose_date">Выберите дату</string>
    <string name="new_item">Новое</string>
    <string name="error">Нет интернета, загружаю локально</string>
    <string name="auth_dialog_title">Яндекс.Паспорт</string>
    <string name="auth_dialog_message">Желаете войти с помощью Яндекс аккаунта?</string>
    <string name="auth_dialog_positive">Да</string>
    <string name="auth_dialog_negative">Нет</string>
    <string name="auth_dialog_neutral">Больше не спрашивай</string>
    <string name="priority_icon_description">Priority icon</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="choose_theme">Выберите тему</string>
    <string name="notification_request">Показывать уведомления?</string>
    <string name="yes">Да</string>

    <string-array name="theme_items">
        <item>Светлая тема</item>
        <item>Темная тема</item>
        <item>Как в системе</item>
    </string-array>

</resources>