<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/back_primary"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:background="?attr/back_primary"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            app:navigationIcon="@drawable/close">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:textColor="?attr/color_blue"
                android:textAppearance="@style/Button"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/save"

                android:layout_gravity="end"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="?attr/back_secondary"
                android:elevation="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_editor_absoluteY="100dp"
                tools:layout_editor_absoluteX="16dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/what_to_do"
                    android:inputType="textMultiLine"
                    android:minHeight="104dp"
                    tools:ignore="Autofill,LabelFor" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:id="@+id/priority"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_editor_absoluteY="200dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/priority"
                    android:textAppearance="@style/Body" />

                <TextView
                    android:id="@+id/currentPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/no"
                    android:textAppearance="@style/SubHead" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="2dp"
                app:layout_constraintTop_toBottomOf="@+id/priority"
                app:layout_editor_absoluteY="300dp"
                tools:layout_editor_absoluteX="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/make_until"
                android:textAppearance="@style/Body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/materialDivider" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/makeUntil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_date"
                android:textAppearance="@style/Button"
                app:layout_constraintStart_toStartOf="@+id/materialTextView"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView"
                app:layout_editor_absoluteY="400dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="?attr/color_blue"
                android:buttonTint="?attr/color_blue"
                app:layout_constraintBottom_toBottomOf="@+id/materialTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/materialTextView"
                app:layout_editor_absoluteY="400dp" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/switchMaterial" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="16dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/Body"
                android:textColor="?attr/color_red"
                android:drawableStart="@drawable/delete"
                app:drawableTint="?attr/color_red"
                android:drawablePadding="8dp"
                android:layout_marginTop="2dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/delete"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider2"
                app:layout_editor_absoluteY="500dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>